Changed default logic for FailureRule from "any" to "or". Updated docs. Updated NSF scenario.

--- a/scenarios/nsfnet.yaml
+++ b/scenarios/nsfnet.yaml
@@ -1,118 +1,183 @@
 # NSFNET T3 (1992) topology scenario
-# Tests realistic backbone network topology with capacity envelope analysis
+# ref: Merit “NSFNET: A Partnership for High-Speed Networking” https://www.merit.edu/wp-content/uploads/2024/10/Merit-Network_NSFNET-A-Partnership-for-High-Speed-Networking.pdf
+# ref: NANOG handy.node.list, 22 May 1992 https://mailman.nanog.org/pipermail/nanog/1992-May/108697.html
+#
+# ──────────────────────────────────────────────────────────────────────────
+#  Model notes
+#
+#  • `site_type: core`  – CNSS POPs built with IBM RS/6000-based routers and
+#    multiple T3 interface cards.  These sites form the nationwide DS-3
+#    (44.736 Mb/s) backbone that entered full production in 1992.
+#
+#  • `site_type: edge`  – ENSS gateways and the two “additional sites served”
+#    (Cambridge MA & NASA Ames).  Each connects to one nearby CNSS via a
+#    single DS-3 spur and does not forward transit traffic.
+#
+#  • Links – One record per physical DS-3 circuit.  Capacities are expressed
+#    as `capacity: 45000.0`; latency-based IGRP costs follow 1992 ANS
+#    engineering notes.  No parallel circuits are collapsed in this model.
+# ──────────────────────────────────────────────────────────────────────────
 seed: 5678
 
 network:
   name: "NSFNET T3 (1992)"
-  version: 1.0
+  version: 1.1
   nodes:
-    Seattle: {attrs: {}}
-    SaltLakeCity: {attrs: {}}
-    SanFrancisco: {attrs: {}}
-    LosAngeles: {attrs: {}}
-    Denver: {attrs: {}}
-    Houston: {attrs: {}}
-    Atlanta: {attrs: {}}
-    Chicago: {attrs: {}}
-    AnnArbor: {attrs: {}}
-    WashingtonDC: {attrs: {}}
-    NewYork: {attrs: {}}
-    Princeton: {attrs: {}}
-    Ithaca: {attrs: {}}
-    CollegePark: {attrs: {}}
+    # ───── CNSS core POPs ────────────────────────────────────────────────
+    Seattle:          {attrs: {site_type: core}}
+    PaloAlto:         {attrs: {site_type: core}}
+    LosAngeles:       {attrs: {site_type: core}}
+    SaltLakeCity:     {attrs: {site_type: core}}
+    Denver:           {attrs: {site_type: core}}
+    Lincoln:          {attrs: {site_type: core}}
+    StLouis:          {attrs: {site_type: core}}
+    Chicago:          {attrs: {site_type: core}}
+    Cleveland:        {attrs: {site_type: core}}
+    NewYork:          {attrs: {site_type: core}}
+    WashingtonDC:     {attrs: {site_type: core}}
+    Greensboro:       {attrs: {site_type: core}}
+    Atlanta:          {attrs: {site_type: core}}
+    Houston:          {attrs: {site_type: core}}
+    AnnArbor:         {attrs: {site_type: core}}
+    Hartford:         {attrs: {site_type: core}}
+    # ───── ENSS / super-computer & “additional” sites ───────────────────
+    Cambridge:        {attrs: {site_type: edge}}   # NEARnet – additional site
+    Argonne:          {attrs: {site_type: edge}}   # additional site
+    SanDiego:         {attrs: {site_type: edge}}
+    Boulder:          {attrs: {site_type: edge}}
+    Princeton:        {attrs: {site_type: edge}}
+    Ithaca:           {attrs: {site_type: edge}}
+    CollegePark:      {attrs: {site_type: edge}}
+    Pittsburgh:       {attrs: {site_type: edge}}
+    UrbanaChampaign:  {attrs: {site_type: edge}}
+    MoffettField:     {attrs: {site_type: edge}}   # NASA Ames additional site
   links:
-    # Backbone connections (approximate 1992 NSFNET T3)
-    - source: Seattle
-      target: SaltLakeCity
-      link_params: {capacity: 45000.0, cost: 10}
-    - source: Seattle
-      target: Chicago
-      link_params: {capacity: 45000.0, cost: 12}
-    - source: SanFrancisco
-      target: LosAngeles
-      link_params: {capacity: 45000.0, cost: 8}
-    - source: SanFrancisco
-      target: SaltLakeCity
-      link_params: {capacity: 45000.0, cost: 10}
-    - source: SaltLakeCity
-      target: Denver
-      link_params: {capacity: 45000.0, cost: 9}
-    - source: LosAngeles
-      target: Denver
-      link_params: {capacity: 45000.0, cost: 11}
-    - source: LosAngeles
-      target: Houston
-      link_params: {capacity: 45000.0, cost: 14}
-    - source: Denver
-      target: Chicago
-      link_params: {capacity: 45000.0, cost: 10}
-    - source: Chicago
-      target: AnnArbor
-      link_params: {capacity: 45000.0, cost: 5}
-    - source: Chicago
-      target: Seattle
-      link_params: {capacity: 45000.0, cost: 12}
-    - source: Houston
-      target: Atlanta
-      link_params: {capacity: 45000.0, cost: 10}
-    - source: Atlanta
-      target: WashingtonDC
-      link_params: {capacity: 45000.0, cost: 7}
-    - source: WashingtonDC
-      target: NewYork
-      link_params: {capacity: 45000.0, cost: 4}
-    - source: NewYork
-      target: Princeton
-      link_params: {capacity: 45000.0, cost: 3}
-    - source: Princeton
-      target: Ithaca
-      link_params: {capacity: 45000.0, cost: 5}
-    - source: Princeton
-      target: WashingtonDC
-      link_params: {capacity: 45000.0, cost: 4}
-    - source: CollegePark
-      target: WashingtonDC
-      link_params: {capacity: 45000.0, cost: 3}
-    - source: CollegePark
-      target: NewYork
-      link_params: {capacity: 45000.0, cost: 5}
-    - source: AnnArbor
-      target: NewYork
-      link_params: {capacity: 45000.0, cost: 6}
-    - source: Denver
-      target: SaltLakeCity
-      link_params: {capacity: 45000.0, cost: 9}
-    - source: Houston
-      target: LosAngeles
-      link_params: {capacity: 45000.0, cost: 14}
+    # Northern arc  (two parallel circuits per hop)
+    - {source: NewYork,  target: Cleveland,  link_params: {capacity: 45000.0, cost: 4, attrs: {circuit: A}}}
+    - {source: NewYork,  target: Cleveland,  link_params: {capacity: 45000.0, cost: 4, attrs: {circuit: B}}}
+    - {source: Cleveland,target: Chicago,    link_params: {capacity: 45000.0, cost: 6, attrs: {circuit: A}}}
+    - {source: Cleveland,target: Chicago,    link_params: {capacity: 45000.0, cost: 6, attrs: {circuit: B}}}
+    - {source: Chicago,  target: PaloAlto,   link_params: {capacity: 45000.0, cost: 12, attrs: {circuit: A}}}
+    - {source: Chicago,  target: PaloAlto,   link_params: {capacity: 45000.0, cost: 12, attrs: {circuit: B}}}
+
+    # Southern arc  (two parallel circuits per hop)
+    - {source: NewYork,      target: WashingtonDC, link_params: {capacity: 45000.0, cost: 4, attrs: {circuit: A}}}
+    - {source: NewYork,      target: WashingtonDC, link_params: {capacity: 45000.0, cost: 4, attrs: {circuit: B}}}
+    - {source: WashingtonDC, target: Greensboro,   link_params: {capacity: 45000.0, cost: 5, attrs: {circuit: A}}}
+    - {source: WashingtonDC, target: Greensboro,   link_params: {capacity: 45000.0, cost: 5, attrs: {circuit: B}}}
+    - {source: Greensboro,   target: Atlanta,      link_params: {capacity: 45000.0, cost: 7, attrs: {circuit: A}}}
+    - {source: Greensboro,   target: Atlanta,      link_params: {capacity: 45000.0, cost: 7, attrs: {circuit: B}}}
+    - {source: Atlanta,      target: Houston,      link_params: {capacity: 45000.0, cost: 10, attrs: {circuit: A}}}
+    - {source: Atlanta,      target: Houston,      link_params: {capacity: 45000.0, cost: 10, attrs: {circuit: B}}}
+    - {source: Houston,      target: LosAngeles,  link_params: {capacity: 45000.0, cost: 14, attrs: {circuit: A}}}
+    - {source: Houston,      target: LosAngeles,  link_params: {capacity: 45000.0, cost: 14, attrs: {circuit: B}}}
+    - {source: LosAngeles,   target: PaloAlto,    link_params: {capacity: 45000.0, cost: 8,  attrs: {circuit: A}}}
+    - {source: LosAngeles,   target: PaloAlto,    link_params: {capacity: 45000.0, cost: 8,  attrs: {circuit: B}}}
+
+    # Pacific NW & Rockies (two parallel circuits per hop)
+    - {source: Seattle,      target: PaloAlto,     link_params: {capacity: 45000.0, cost: 9, attrs: {circuit: A}}}
+    - {source: Seattle,      target: PaloAlto,     link_params: {capacity: 45000.0, cost: 9, attrs: {circuit: B}}}
+    - {source: Seattle,      target: SaltLakeCity, link_params: {capacity: 45000.0, cost: 10, attrs: {circuit: A}}}
+    - {source: Seattle,      target: SaltLakeCity, link_params: {capacity: 45000.0, cost: 10, attrs: {circuit: B}}}
+    - {source: SaltLakeCity, target: Denver,       link_params: {capacity: 45000.0, cost: 9, attrs: {circuit: A}}}
+    - {source: SaltLakeCity, target: Denver,       link_params: {capacity: 45000.0, cost: 9, attrs: {circuit: B}}}
+    - {source: Denver,       target: Lincoln,      link_params: {capacity: 45000.0, cost: 8, attrs: {circuit: A}}}
+    - {source: Denver,       target: Lincoln,      link_params: {capacity: 45000.0, cost: 8, attrs: {circuit: B}}}
+    - {source: Lincoln,      target: StLouis,      link_params: {capacity: 45000.0, cost: 6, attrs: {circuit: A}}}
+    - {source: Lincoln,      target: StLouis,      link_params: {capacity: 45000.0, cost: 6, attrs: {circuit: B}}}
+    - {source: StLouis,      target: Chicago,      link_params: {capacity: 45000.0, cost: 5, attrs: {circuit: A}}}
+    - {source: StLouis,      target: Chicago,      link_params: {capacity: 45000.0, cost: 5, attrs: {circuit: B}}}
+
+    # Midwest shortcuts (two circuits)
+    - {source: Cleveland,    target: StLouis,      link_params: {capacity: 45000.0, cost: 7, attrs: {circuit: A}}}
+    - {source: Cleveland,    target: StLouis,      link_params: {capacity: 45000.0, cost: 7, attrs: {circuit: B}}}
+    - {source: Denver,       target: SaltLakeCity, link_params: {capacity: 45000.0, cost: 9, attrs: {circuit: A}}}
+    - {source: Denver,       target: SaltLakeCity, link_params: {capacity: 45000.0, cost: 9, attrs: {circuit: B}}}
+
+    # Great-Lakes loop (two circuits)
+    - {source: Chicago,      target: AnnArbor,     link_params: {capacity: 45000.0, cost: 5, attrs: {circuit: A}}}
+    - {source: Chicago,      target: AnnArbor,     link_params: {capacity: 45000.0, cost: 5, attrs: {circuit: B}}}
+    - {source: AnnArbor,     target: Cleveland,    link_params: {capacity: 45000.0, cost: 5, attrs: {circuit: A}}}
+    - {source: AnnArbor,     target: Cleveland,    link_params: {capacity: 45000.0, cost: 5, attrs: {circuit: B}}}
+
+    # Hartford hub (two circuits)
+    - {source: Hartford,     target: NewYork,      link_params: {capacity: 45000.0, cost: 5, attrs: {circuit: A}}}
+    - {source: Hartford,     target: NewYork,      link_params: {capacity: 45000.0, cost: 5, attrs: {circuit: B}}}
+    - {source: Hartford,     target: WashingtonDC, link_params: {capacity: 45000.0, cost: 5, attrs: {circuit: A}}}
+    - {source: Hartford,     target: WashingtonDC, link_params: {capacity: 45000.0, cost: 5, attrs: {circuit: B}}}
+
+    # Northeast spur (single DS-3)
+    - {source: Princeton,       target: Ithaca,          link_params: {capacity: 45000.0, cost: 5, attrs: {circuit: A}}}
+    - {source: Princeton,       target: WashingtonDC,    link_params: {capacity: 45000.0, cost: 4, attrs: {circuit: A}}}
+    - {source: CollegePark,     target: WashingtonDC,    link_params: {capacity: 45000.0, cost: 3, attrs: {circuit: A}}}
+    - {source: CollegePark,     target: NewYork,         link_params: {capacity: 45000.0, cost: 6, attrs: {circuit: A}}}
+    - {source: Cambridge,       target: NewYork,         link_params: {capacity: 45000.0, cost: 6, attrs: {circuit: A}}}
+
+    # ENSS & “additional site” spurs (single DS-3)
+    - {source: Argonne,         target: Chicago,         link_params: {capacity: 45000.0, cost: 4, attrs: {circuit: A}}}
+    - {source: SanDiego,        target: LosAngeles,      link_params: {capacity: 45000.0, cost: 6, attrs: {circuit: A}}}
+    - {source: Boulder,         target: Denver,          link_params: {capacity: 45000.0, cost: 4, attrs: {circuit: A}}}
+    - {source: Pittsburgh,      target: Cleveland,       link_params: {capacity: 45000.0, cost: 4, attrs: {circuit: A}}}
+    - {source: UrbanaChampaign, target: Chicago,         link_params: {capacity: 45000.0, cost: 4, attrs: {circuit: A}}}
+    - {source: MoffettField,    target: PaloAlto,        link_params: {capacity: 45000.0, cost: 6, attrs: {circuit: A}}}
 
 failure_policy_set:
+  availability_1992:
+    attrs:
+      name: "historical_availability_1992"
+      description: >
+        Approximates 1992 backbone reliability: each physical DS-3 has
+        ~99.9 % monthly availability (p=0.001 failure), and each CNSS or
+        ENSS router has ~99.95 % availability (p=0.0005 failure).
+    fail_shared_risk_groups: false
+    fail_risk_group_children: false
+    use_cache: false
+    rules:
+      # link reliability — random independent failures
+      - entity_scope: link
+        rule_type: random
+        probability: 0.001      # 0.1 % chance a given circuit is down
+      # node reliability — random independent router failures
+      - entity_scope: node
+        rule_type: random
+        probability: 0.0005     # 0.05 % chance a given node is down
+
   default:
     attrs:
-      name: "single_random_link_failure"
-      description: "Fails exactly one random link to test network resilience"
+      name: single_random_link_failure
+      description: Fails exactly one random link to test network resilience
     rules:
-      - entity_scope: "link"
-        logic: "any"
-        rule_type: "choice"
+      - entity_scope: link
+        rule_type: choice
         count: 1
 
 workflow:
   - step_type: BuildGraph
     name: build_graph
   - step_type: CapacityEnvelopeAnalysis
-    name: "ce_1"
+    name: ce_1
     source_path: "^(.+)"
     sink_path: "^(.+)"
-    mode: "pairwise"
+    mode: pairwise
     parallelism: 8
     shortest_path: false
-    flow_placement: "PROPORTIONAL"
-    iterations: 100
+    flow_placement: PROPORTIONAL
+    iterations: 1000
     baseline: true
-    failure_policy: "default"
+    failure_policy: default
+  - step_type: CapacityEnvelopeAnalysis
+    name: ce_2
+    source_path: "^(.+)"
+    sink_path: "^(.+)"
+    mode: pairwise
+    parallelism: 8
+    shortest_path: false
+    flow_placement: PROPORTIONAL
+    iterations: 1000
+    baseline: true
+    failure_policy: availability_1992
   - step_type: NotebookExport
-    name: "export_analysis"
-    notebook_path: "analysis.ipynb"
-    json_path: "results.json"
+    name: export_analysis
+    notebook_path: analysis.ipynb
+    json_path: results.json
     allow_empty_results: false
