--- a/tests/scenarios/scenario_3.yaml
+++ b/tests/scenarios/scenario_3.yaml
@@ -71,35 +71,35 @@ network:
         capacity: 1
         cost: 1
 
-    # Demonstrates setting a shared_risk_group and hw_component on all spine to spine links.
+    # Demonstrates setting risk groups and hw_component on all spine to spine links.
     - source: .*/spine/.*
       target: .*/spine/.*
       any_direction: True
       link_params:
+        risk_groups: ["SpineSRG"]
         attrs:
-          shared_risk_groups: ["SpineSRG"]
           hw_component: "400G-LR4"
 
-  # Example node overrides that assign SRGs and hardware types
+  # Example node overrides that assign risk groups and hardware types
   node_overrides:
     - path: my_clos1/b1/t1
+      risk_groups: ["clos1-b1t1-SRG"]
       attrs:
-        shared_risk_groups: ["clos1-b1t1-SRG"]
         hw_component: "LeafHW-A"
 
     - path: my_clos2/b2/t1
+      risk_groups: ["clos2-b2t1-SRG"]
       attrs:
-        shared_risk_groups: ["clos2-b2t1-SRG"]
         hw_component: "LeafHW-B"
 
     - path: my_clos1/spine/t3.*
+      risk_groups: ["clos1-spine-SRG"]
       attrs:
-        shared_risk_groups: ["clos1-spine-SRG"]
         hw_component: "SpineHW"
 
     - path: my_clos2/spine/t3.*
+      risk_groups: ["clos2-spine-SRG"]
       attrs:
-        shared_risk_groups: ["clos2-spine-SRG"]
         hw_component: "SpineHW"
 
 workflow:
