Add performance analysis module. sts. Refactor tests to utilize new integration scenarios and expectations.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,8 +65,12 @@ ngraph = "ngraph.cli:main"
 # ---------------------------------------------------------------------
 # Pytest flags
 [tool.pytest.ini_options]
-addopts = "--cov=ngraph --cov-fail-under=85 --cov-report term-missing"
+addopts = "--cov=ngraph --cov-fail-under=85 --cov-report term-missing --benchmark-disable-gc --benchmark-min-rounds=5 --benchmark-warmup=on"
 timeout = 30
+markers = [
+    "slow: marks integration tests as slow (deselect with '-m \"not slow\"')",
+    "benchmark: marks tests as performance benchmarks (run with '-m benchmark')",
+]
 
 # ---------------------------------------------------------------------
 # Package discovery
