--- a/scenarios/simple.yaml
+++ b/scenarios/simple.yaml
@@ -111,7 +111,7 @@ risk_groups:
   - name: srlg_12
 
 failure_policy_set:
-  default:
+  single_random_link_failure:
     attrs:
       description: "Fails exactly one random link to test network resilience"
     rules:
@@ -142,7 +142,7 @@ workflow:
   seed: 42
   iterations: 1000
   baseline: true           # Enable baseline mode
-  failure_policy: "default"
+  failure_policy: "single_random_link_failure"
 - step_type: CapacityEnvelopeAnalysis
   name: "ce_2"
   source_path: "^(spoke_.+)"
