--- a/scenarios/nsfnet.yaml
+++ b/scenarios/nsfnet.yaml
@@ -156,7 +156,6 @@ risk_groups:
 failure_policy_set:
   availability_1992:
     attrs:
-      name: "historical_availability_1992"
       description: >
         Approximates 1992 backbone reliability: each physical DS-3 has
         ~99.9 % monthly availability (p=0.001 failure), and each CNSS or
@@ -174,9 +173,8 @@ failure_policy_set:
         rule_type: random
         probability: 0.0005     # 0.05 % chance a given node is down
 
-  default:
+  single_random_link_failure:
     attrs:
-      name: single_random_link_failure
       description: Fails exactly one random link to test network resilience
     rules:
       - entity_scope: link
@@ -199,7 +197,7 @@ workflow:
     flow_placement: PROPORTIONAL
     iterations: 1000
     baseline: true
-    failure_policy: default
+    failure_policy: single_random_link_failure
     store_failure_patterns: true
   - step_type: CapacityEnvelopeAnalysis
     name: ce_2
@@ -209,7 +207,7 @@ workflow:
     parallelism: 8
     shortest_path: false
     flow_placement: PROPORTIONAL
-    iterations: 1000000
+    iterations: 10000
     baseline: true
     failure_policy: availability_1992
     store_failure_patterns: true
