migration to the new capacity workflow and cleanup

--- a/tests/integration/scenario_3.yaml
+++ b/tests/integration/scenario_3.yaml
@@ -106,20 +106,50 @@ workflow:
   - step_type: BuildGraph
     name: build_graph
 
-  - step_type: CapacityProbe
-    name: capacity_probe
+  # Forward direction analysis - equivalent to capacity_probe
+  - step_type: CapacityEnvelopeAnalysis
+    name: capacity_analysis_forward
     source_path: my_clos1/b.*/t1
     sink_path: my_clos2/b.*/t1
     mode: combine
-    probe_reverse: True
-    shortest_path: True
+    shortest_path: true
     flow_placement: PROPORTIONAL
+    iterations: 1
+    baseline: false
+    failure_policy: null
 
-  - step_type: CapacityProbe
-    name: capacity_probe2
+  # Reverse direction analysis - equivalent to capacity_probe with probe_reverse
+  - step_type: CapacityEnvelopeAnalysis
+    name: capacity_analysis_reverse
+    source_path: my_clos2/b.*/t1
+    sink_path: my_clos1/b.*/t1
+    mode: combine
+    shortest_path: true
+    flow_placement: PROPORTIONAL
+    iterations: 1
+    baseline: false
+    failure_policy: null
+
+  # Forward direction with EQUAL_BALANCED - equivalent to capacity_probe2
+  - step_type: CapacityEnvelopeAnalysis
+    name: capacity_analysis_forward_balanced
     source_path: my_clos1/b.*/t1
     sink_path: my_clos2/b.*/t1
     mode: combine
-    probe_reverse: True
-    shortest_path: True
+    shortest_path: true
     flow_placement: EQUAL_BALANCED
+    iterations: 1
+    baseline: false
+    failure_policy: null
+
+  # Reverse direction with EQUAL_BALANCED - equivalent to capacity_probe2 with probe_reverse
+  - step_type: CapacityEnvelopeAnalysis
+    name: capacity_analysis_reverse_balanced
+    source_path: my_clos2/b.*/t1
+    sink_path: my_clos1/b.*/t1
+    mode: combine
+    shortest_path: true
+    flow_placement: EQUAL_BALANCED
+    iterations: 1
+    baseline: false
+    failure_policy: null
